--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animejs": "^3.0.1",
+    "axios": "^0.18.0",
     "mapbox-gl": "^0.53.0",
     "mapbox-gl-vue": "^1.9.0",
     "nanoreset": "^3.0.2",
