--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.18.0",
     "mapbox-gl": "^0.53.0",
     "mapbox-gl-vue": "^1.9.0",
+    "moment": "^2.24.0",
     "nanoreset": "^3.0.2",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
