--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.6.6",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vue2-timepicker": "^0.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
