--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
+    "i": "^0.3.6",
     "mapbox-gl": "^0.53.0",
     "mapbox-gl-vue": "^1.9.0",
     "moment": "^2.24.0",
     "nanoreset": "^3.0.2",
+    "npm": "^6.9.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
     "vue-moment": "^4.0.0",
