--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "i": "^0.3.6",
     "mapbox-gl": "^0.53.0",
     "mapbox-gl-vue": "^1.9.0",
@@ -21,6 +22,7 @@
     "nanoreset": "^3.0.2",
     "npm": "^6.9.0",
     "register-service-worker": "^1.5.2",
+    "v-tooltip": "^2.0.1",
     "vue": "^2.6.6",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
