--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "register-service-worker": "^1.5.2",
     "v-tooltip": "^2.0.1",
     "vue": "^2.6.6",
+    "vue-headful": "^2.0.1",
     "vue-i18n": "^8.10.0",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
