--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "@sentry/browser": "^5.1.1",
+    "@sentry/integrations": "^5.1.0",
     "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "eslint-plugin-prettier": "^3.0.1",
