--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-headful": "^2.0.1",
     "vue-i18n": "^8.10.0",
     "vue-moment": "^4.0.0",
+    "vue-offline": "^2.0.8",
     "vue-router": "^3.0.1",
     "vue2-timepicker": "^0.1.4",
     "vuex": "^3.0.1"
