--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.6.6",
     "vue-headful": "^2.0.1",
     "vue-i18n": "^8.10.0",
+    "vue-mapbox": "^0.4.1",
     "vue-moment": "^4.0.0",
     "vue-offline": "^2.0.8",
     "vue-router": "^3.0.1",
