--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "dev": "yarn run serve",
-    "build": "vue-cli-service build --modern",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
