--- a/package.json
+++ b/package.json
@@ -15,47 +15,47 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.18",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@sentry/browser": "^5.1.1",
-    "@sentry/integrations": "^5.1.0",
-    "animejs": "^3.0.1",
+    "@sentry/browser": "^5.3.0",
+    "@sentry/integrations": "^5.3.0",
     "axios": "^0.18.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "babel-polyfill": "^6.26.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "i": "^0.3.6",
-    "mapbox-gl": "^0.53.0",
+    "mapbox-gl": "^1.0.0",
     "mapbox-gl-vue": "^1.9.0",
     "moment": "^2.24.0",
     "nanoreset": "^3.0.2",
     "npm": "^6.9.0",
-    "register-service-worker": "^1.5.2",
-    "v-tooltip": "^2.0.1",
-    "vue": "^2.6.6",
+    "register-service-worker": "^1.6.2",
+    "v-tooltip": "^2.0.2",
+    "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
-    "vue-i18n": "^8.10.0",
+    "vue-i18n": "^8.11.2",
     "vue-mapbox": "^0.4.1",
     "vue-moment": "^4.0.0",
     "vue-offline": "^2.0.8",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.6",
     "vue2-timepicker": "^0.1.4",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.1",
-    "@vue/cli-plugin-eslint": "^3.4.1",
-    "@vue/cli-plugin-pwa": "^3.4.1",
-    "@vue/cli-service": "^3.4.1",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-plugin-pwa": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "husky": ">=1",
-    "lint-staged": "^8.1.0",
-    "node-sass": "^4.9.0",
-    "prettier": "^1.17.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "husky": ">=2",
+    "lint-staged": "^8.1.7",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.17.1",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
