--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/integrations": "^5.3.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "countup.js": "^2.0.4",
     "eslint-plugin-prettier": "^3.1.0",
     "i": "^0.3.6",
     "mapbox-gl": "^1.0.0",
@@ -32,6 +33,7 @@
     "register-service-worker": "^1.6.2",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.10",
+    "vue-countup-v2": "^3.0.1",
     "vue-headful": "^2.0.1",
     "vue-i18n": "^8.11.2",
     "vue-mapbox": "^0.4.1",
