--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vue-offline": "^2.0.8",
     "vue-router": "^3.0.6",
     "vue2-timepicker": "^0.1.4",
+    "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
