--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-mapbox": "^0.4.1",
     "vue-moment": "^4.0.0",
     "vue-offline": "^2.0.8",
+    "vue-pdf": "^4.0.7",
     "vue-router": "^3.0.6",
     "vue2-timepicker": "^0.1.4",
     "vuejs-datepicker": "^1.5.4",
