--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "countup.js": "^2.0.4",
     "eslint-plugin-prettier": "^3.1.0",
+    "esm": "3.1.0",
     "i": "^0.3.6",
     "mapbox-gl": "^1.0.0",
     "mapbox-gl-vue": "^1.9.0",
